# COHDD

./: .env-example  .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: aws-access-command.mdc  clean-code.mdc  crewai.mdc  langgraph.mdc  python.mdc  tailwind.mdc  typescript.mdc
data/: Station_Locations.csv
outputs/: COHDD-DGE4-2025-08-05.html  COHDD-DGE4-2025-08-05.md  COHDD-DHI2-2025-08-14.html  COHDD-DHI2-2025-08-14.md  COH_Program_Manager_Introduction_and_Suggestions.txt  US_Stations_COH_Data_2025-08-10.csv  filesystem_assistant_introduction.txt
utils/: S3_reader.py  attribution.py  bmfs.py  coh_doc.py  data_collect_tool.py  data_collector.py  data_collector_prompt.py  data_visualization.py  data_visualization_server.py  get_station_data.py  heuristic_analysis_prompt.py  input_sql_query.py  markdown_2_html.py  station_coh_rca.py  weather_server.py
